Disable dark mode and correct code block colour

--- a/_sass/colormode.scss
+++ b/_sass/colormode.scss
@@ -6,7 +6,8 @@ html {
 	--main-background-color: #FFFFFF;
 	--main-text-color: #121212;
 	--main-code-color: #943000;
-	--sec-background-color: #B5B5B5;
+	--sec-border-color: #aaa;
+	--sec-background-color: #EFEFEF;
 	--title-background-color: #0d1c2c;
 	--breadcrumb-background-color: #4695EB;
 
@@ -16,7 +17,8 @@ html {
 
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) { */
+@media screen and (max-width: 1px) {
     html {
     	--link-color: #9BCAFA;
 		--link-color-hover: #CC0000;
