--- a/_sass/quarkus.scss
+++ b/_sass/quarkus.scss
@@ -449,6 +449,7 @@ dl dt:not(:first-child) {
 /* Over gray in text */
 code {
   color: var(--main-code-color);
+  background-color: var(--main-code-background-color);
 }
 
 /* Over black in code blocks */
@@ -478,7 +479,7 @@ pre {
 }
 
 pre.highlight, .literalblock pre, .listingblock > .content > pre {
- border: 1px solid var(--sec-background-color);
+ border: 1px solid var(--sec-border-color);
  padding: 1rem;
  line-height: 1.2em;
  overflow-x: auto;
